<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">拍宝</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 首页tab字段 -->
    <string name="home">首页</string>
    <string name="find">寻宝</string>
    <string name="mall">商城</string>
    <string name="nearby">身边</string>
    <string name="user">我的</string>

    <!-- 我的空间tab字段 -->
    <string name="myplay">我的宝贝</string>
    <string name="onsale">出售中的宝贝</string>
    <string name="favorite">我的喜欢</string>
    <string name="comment">我的评论</string>

    <!-- 瀑布流 -->
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- 版本更新 -->
    <string name="version_update_dialog_message">检查到新版本  </string>
    <string name="version_update_dialog_title">发现新版本</string>
    <string name="version_request_wait_toast_message">检测新版本，请稍等&#8230;</string>
    <string name="no_need_update_toast_message">已经是最新版本!</string>
    <string name="apk_download_dialog_message">正在下载新版本</string>
    <string name="apk_download_failure_toast_message">下载新版本失败，请重试</string>
    <string name="confirm">确认</string>
    <string name="networkerror">网络错误</string>
    <string name="hint_system">系统提示</string>
    <string name="tab_1">全部</string>
    <string name="tab_2">出售</string>
    <string name="tab_3">掌眼</string>
    <string name="tab_4">把玩</string>
    <string name="tab_5">分享</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_activity_shop_image">ShopImageActivity</string>
    <string name="zhangyan_text">求掌眼</string>
    <string name="sale_text">出售</string>
    <string name="bawan_text">把玩</string>
    <string name="share_text">分享</string>

</resources>