<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header_top2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_button"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/header_ll"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/top_radio_button_group2"
        android:layout_width="wrap_content"
        android:layout_height="35dip"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tv_tab_activity2"
            style="@style/index_tab_top2"
            android:checked="true"
            android:text="@string/tab_1"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/tv_tab_groups2"
            style="@style/index_tab_top2"
            android:text="@string/tab_2"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/tv_tab_friends2"
            style="@style/index_tab_top2"
            android:text="@string/tab_3"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/tv_tab_chat2"
            style="@style/index_tab_top2"
            android:text="@string/tab_4"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/tv_tab_mei2"
            style="@style/index_tab_top2"
            android:text="@string/tab_5"
            android:textSize="12sp" />
    </RadioGroup>
    <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="bottom"
	            android:orientation="vertical"
	           >

	            <ImageView
	                android:id="@+id/iv_bottom_line2"
	                android:layout_width="110dip"
	                android:layout_height="2dip"
	                android:scaleType="matrix"
	                android:src="@color/white" />

	        </LinearLayout>
	        </LinearLayout>

    <ImageView
        android:id="@+id/title_bar_right2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/takephoto" />
</RelativeLayout>
