<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dialog_button"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_layout"
        layout="@layout/top_title_bar" />

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

       <com.play.treasure.MyGallery 
           android:background="#000" 
           android:layout_height="wrap_content" 
           android:layout_width="fill_parent" 
           android:id="@+id/banner_gallery" 
           android:soundEffectsEnabled="false" 
           android:keepScreenOn="true" 
           android:gravity="center" 
           android:fadingEdgeLength="0.0dp"/>
          <!--  <WebView
	        android:id="@+id/main_banner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
            android:background="#000"
            android:fadingEdgeLength="0.0dp"
            android:gravity="center"
            android:keepScreenOn="true"
            android:soundEffectsEnabled="false"
            android:visibility="gone"/> -->
         <LinearLayout
             android:id="@+id/ll_focus_indicator_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="bottom"              
             android:orientation="horizontal" 
             android:layout_gravity="bottom|center"/>
     </FrameLayout>
     <!-- tab切换 -->

     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/dialog_button" />

	 <LinearLayout     
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	       
	        android:orientation="vertical" 
	        android:background="@color/white"
	        >
             <include
        android:id="@+id/header_top2"
        layout="@layout/second_header" 
        android:visibility="gone"/>

         	        <LinearLayout
         	            android:id="@+id/first_header"
         	            android:layout_width="match_parent"
         	            android:layout_height="wrap_content"
         	            android:layout_gravity="bottom"
         	            android:orientation="vertical" >

	       <RadioGroup
                android:id="@+id/top_radio_button_group2"
 	            android:layout_width="fill_parent"
	            android:layout_height="35dip"
	            android:layout_gravity="center"               
	            android:orientation="horizontal" >
	            
	            <RadioButton
	                android:id="@+id/tv_tab_activity"
	                android:text="@string/tab_1"
	                style="@style/index_tab_top"
	                android:checked="true"
	                android:textSize="18sp"
	                />
	
	            <RadioButton
	                android:id="@+id/tv_tab_groups"
	                android:text="@string/tab_2"
	                style="@style/index_tab_top"
	                android:textSize="18sp"
	                />
	
	            <RadioButton
	                android:id="@+id/tv_tab_friends"
					style="@style/index_tab_top"
	                android:text="@string/tab_3"
	                android:textSize="18sp"
	                />
	
	         <RadioButton
	                android:id="@+id/tv_tab_chat"
					style="@style/index_tab_top"
	                android:text="@string/tab_4"
	                android:textSize="18sp"
	                 />
	            <RadioButton
	                android:id="@+id/tv_tab_mei"
					style="@style/index_tab_top"
	                android:text="@string/tab_5"
	                android:textSize="18sp"
	                 /> 
	        </RadioGroup>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="bottom"
	            android:orientation="vertical"
	           >
	            <ImageView
	                android:id="@+id/iv_bottom_line"
	                android:layout_width="110dip"
	                android:layout_height="6dip"	                
	                android:scaleType="matrix"
	                android:src="@color/dialog_button" />
	        </LinearLayout>
	        </LinearLayout>

	     <android.support.v4.view.ViewPager
	         android:id="@+id/vPager"
	         android:layout_width="match_parent"
	         android:layout_height="0dp"
	         android:layout_gravity="center"
	         android:layout_weight="1.0"
	         android:background="@color/choose_eara_item_press_color"
	         android:flipInterval="30"
	         android:persistentDrawingCache="animation" />

	    </LinearLayout>	    	
	</LinearLayout>
  <!-- 切换结束 -->
</LinearLayout>